validaciones del formulario usuario v1

--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -8,7 +8,7 @@
   <div class="listarUsuario">
     <table [class]="'table'">
       <thead>
-        <th>Nombres</th>
+        <th >Nombres</th>
         <th>Apellido Paterno</th>
         <th>Apellido Materno</th>
         <th>DNI</th>
@@ -48,38 +48,46 @@
           <div class="column">
             <div [class]="['column1']">
               <label for="">Nombres</label>
-              <input type="text" name="" formControlName="nombres" placeholder="Pedro Julian"> 
+              <input [class.valido]="this.form.get('nombres')?.valid" [class.invalido]="this.form.get('nombres')?.invalid && this.form.get('nombres')?.touched" type="text" name="" formControlName="nombres" placeholder="Pedro Julian"> 
+              
               <label for="">Apellido Paterno</label>
-              <input type="text" formControlName="apellidoPaterno" placeholder="Flores">
+              <input [class.valido]="this.form.get('apellidoPaterno')?.valid" [class.invalido]="this.form.get('apellidoPaterno')?.invalid && this.form.get('apellidoPaterno')?.touched" type="text" formControlName="apellidoPaterno" placeholder="Flores">
+
               <label for="">Apellido Materno</label>
-              <input type="text" formControlName="apellidoMaterno" placeholder="Ricse">
+              <input [class.valido]="this.form.get('apellidoMaterno')?.valid" [class.invalido]="this.form.get('apellidoMaterno')?.invalid && this.form.get('apellidoMaterno')?.touched" type="text" formControlName="apellidoMaterno" placeholder="Ricse">
+
               <label for="">Documento Nacional de Identidad</label>
-              <input type="number" formControlName="dni" placeholder="82898766" maxlength="8">
+              <input [class.valido]="this.form.get('dni')?.valid" [class.invalido]="this.form.get('dni')?.invalid && this.form.get('dni')?.touched" type="number" formControlName="dni" placeholder="82898766" minlength="8" maxlength="8">
+
               <label for="">Telefono</label>
-              <input type="number" formControlName="telefono" placeholder="994427826" maxlength="9">
+              <input [class.valido]="this.form.get('telefono')?.valid" [class.invalido]="this.form.get('telefono')?.invalid && this.form.get('telefono')?.touched" type="tel" formControlName="telefono" placeholder="994427826" minlength="9" maxlength="9">
             </div>
+
             <div [class]="['column2']">
-              <label for="">Estado</label>
-              <div class="estado">
-                <label><input type="radio" name="estado" value="Activo" formControlName="estado">
+              <label [class.valido-estado]="this.form.get('estado')?.valid" [class.invalido-estado]="this.form.get('estado')?.invalid && this.form.get('estado')?.touched">Estado</label>
+              <div class="estado" >
+                <label><input  type="radio" name="estado" value="Activo" formControlName="estado">
                 Activo</label>
                 <label><input type="radio" name="estado" value="Inactivo" formControlName="estado">
                   Inactivo</label>
               </div>
+
               <Label for="">Rol</Label>
               <div [class]="['rol']">
-                <label><input type="radio" name="rol" formControlName="rol" value="Administrador">
+                <label><input [class.valido]="this.form.get('rol')?.valid" [class.invalido]="this.form.get('rol')?.invalid && this.form.get('rol')?.touched" type="radio" name="rol" formControlName="rol" value="Administrador">
                 Administrador</label>
-                <label><input type="radio" name="rol" formControlName="rol" value="Cocinero">
+                <label><input [class.valido]="this.form.get('rol')?.valid" [class.invalido]="this.form.get('rol')?.invalid && this.form.get('rol')?.touched" type="radio" name="rol" formControlName="rol" value="Cocinero">
                 Cocinero</label>   
-                <label><input type="radio" name="rol" formControlName="rol" value="Mesero">
+                <label><input [class.valido]="this.form.get('rol')?.valid" [class.invalido]="this.form.get('rol')?.invalid && this.form.get('rol')?.touched" type="radio" name="rol" formControlName="rol" value="Mesero">
                 Mesero</label> 
               </div>
+
               <label for="">Email</label>
-              <input type="email" id="" formControlName="correo" placeholder="paquita@gmail.com">
+              <input [class.valido]="this.form.get('correo')?.valid" [class.invalido]="this.form.get('correo')?.invalid && this.form.get('correo')?.touched" type="email" id="" formControlName="correo" placeholder="paquita@gmail.com">
+
               <label for="">Password</label>
-              <input type="password" id="" formControlName="password" placeholder=" betinaB06$">
-              <button type="submit" [class]="['btnCreate']"> <i class="fas fa-database"></i> &nbsp;Aceptar</button>
+              <input [class.valido]="this.form.get('password')?.valid" [class.invalido]="this.form.get('password')?.invalid && this.form.get('password')?.touched" type="password" id="" formControlName="password" placeholder=" betinaB06$">
+              <button type="submit" [disabled]="form.invalid" [class]="['btnCreate']"> <i class="fas fa-database"></i> &nbsp;Aceptar</button>
             </div>
           </div>
           
