--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
@@ -20,7 +20,7 @@ $color-gris-ligth:#DDD;
   color: black;
   margin: 2rem 0 1rem 1rem;
   align-self: flex-start;
-  font-size: 35px;
+  // font-size: 35px;
   border-bottom: 5px solid $color-melon;
   padding: 5px;
 }
@@ -212,11 +212,26 @@ input[type=number]::-webkit-outer-spin-button {
 input[type=number] { 
   -moz-appearance:textfield;
   width: 15rem; 
-  border: 1px solid $color-melon;
+  
 }
-@media only screen and (min-width: 700px) and (max-width: 1500px) {
+
+@media only screen and (min-width: 700px) {
   .table{
-    width:70%;
-    font-size:13px;
+    width:100%;
+    font-size:12px;
   }
+}
+
+// estilos de validaciones
+.valido{
+  border: 1px solid teal;
+}
+.invalido{
+  border: 2px solid $color-danger;
+}
+.valido-estado{
+  color: teal;
+}
+.invalido-estado{
+  color: $color-danger;
 }
