--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -12,7 +12,8 @@
 
       <section class="containerOptions">
         <p class="hamburgerTitle">{{ titleHamburger }}</p>
-        <p [hidden]="aditionalSelectValue == 'Ninguno'">{{aditionalName}}</p>
+        <p [hidden]="aditionalTypeValue == 'Ninguno'">Tipo: {{aditionalTypeName}}</p>
+        <p [hidden]="aditionalSelectValue == 'Ninguno'">Adicional: {{aditionalName}}</p>    
         <div class="divOptions">
 
           <img src="{{ imgHamburger }}" alt="Hamburguesa" class="imgHamburger">
@@ -20,7 +21,8 @@
           <div class="selects">
             <div>
               <p>Tipo</p>
-              <select name="type" class="type">
+              <select [(ngModel)]="aditionalTypeValue" (change)="getTypeSelectValue()" name="type" class="type">
+                <option value="Ninguno">Ninguno</option>
                 <option *ngFor="let type of typeHamburger"> {{ type }}</option>
               </select>
             </div>
