--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
@@ -71,11 +71,16 @@ $color-marron: #3B2213;
   height: 66%;
 
   .hamburgerTitle{
-    font-size: 20px;
-    font-family: 'Tajawal', sans-serif;
+    display: flex;
     align-self: flex-start;
-    padding: 5px;
-    // font-weight: bold;
+    flex-wrap: wrap;
+
+    pre{
+      font-size: 18px;
+      font-family: 'Tajawal', sans-serif;
+      // padding: 5px;
+      // font-weight: bold;
+    }
   }
 }
 
@@ -175,6 +180,10 @@ $color-marron: #3B2213;
       overflow-x: hidden;
       z-index: 1;
     }
+  }
+
+  .hamburgerTitle{
+    align-self: center;
   }
 
   .btnIcon{
