--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -21,7 +21,7 @@
                                 <img src="{{ hamburguesa.img }}">
                             </div>
                             <input type="button" value="Ver opciones" class="btn"
-                                (click)="getHamburgerData(hamburguesa)" routerLink="/cartaOpciones"
+                                (click)="sendHamburgerDataToOptionsView(hamburguesa)" routerLink="/cartaOpciones"
                                 routerLinkActive="activebutton">
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                                 <i class="fa-solid fa-circle-check"></i>
                                 <img src="{{ sandwich.img }}">
                             </div>
-                            <input type="button" value="Añadir" class="btn" (click)="setItemData(sandwich)"
+                            <input type="button" value="Añadir" class="btn" (click)="sendItemDataToPedidosView(sandwich)"
                                routerLink="/pedidosMesero" routerLinkActive="activebutton">
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                                 <i class="fa-solid fa-circle-check"></i>
                                 <img src="{{ aperitivo.img }}">
                             </div>
-                            <input type="button" value="Añadir" class="btn" (click)="setItemData(aperitivo)"
+                            <input type="button" value="Añadir" class="btn" (click)="sendItemDataToPedidosView(aperitivo)"
                              routerLink="/pedidosMesero" routerLinkActive="activebutton">
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                                 <img src="{{ bebida.img }}"
                                     routerLink="/pedidosMesero" routerLinkActive="activebutton">
                             </div>
-                            <input type="button" value="Añadir" class="btn" (click)="setItemData(bebida)"
+                            <input type="button" value="Añadir" class="btn" (click)="sendItemDataToPedidosView(bebida)"
                             routerLink="/pedidosMesero" routerLinkActive="activebutton">
                         </div>
                     </div>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="btnIcon">
-            <i class="fa-solid fa-circle-arrow-right" [class.rotate]="booleanValue" (click)="changeSection()"></i>
+            <i class="fa-solid fa-circle-arrow-right" [class.rotate]="booleanValue" (click)="changeSectionOfCarta()"></i>
         </div>
 
     </main>
