--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
@@ -129,6 +129,7 @@ $color-marron: #3B2213;
     padding: 7px;
     font-size: 14px;
     text-align: center;
+    background-color: white;
   }
 }
 
