--- a/burgerQueen/src/app/mesero/carta/carta.component.scss
+++ b/burgerQueen/src/app/mesero/carta/carta.component.scss
@@ -133,7 +133,7 @@ $color-rosa: #FF8087;
     position: relative;
 
     i{
-        display: none;
+        visibility: hidden;
         position: absolute;
         font-size: 1.3em;
         color: $color-rosa;
