--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -13,7 +13,7 @@
 
       <table class="listaPedidos">
         <tr *ngFor="let pedido of pedidosMesero">
-          <td><button>x</button></td>
+          <td><button key=index; (click)="orderDelete(pedido)">x</button></td>
           <td><img src="{{pedido.img}}"></td>
           <td>
             <div class="p">
