Propuesta para calcular subtotal en PedidosMesero - Id y nombre de hamburguesas dinámicos y modularizados en cartaOpciones

--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -22,9 +22,12 @@
             </div>
           </td>
           <td class="divBtn">
-            <button>-</button>
-            <input type="number">
-            <button>+</button>
+            <button (click)="subtractQuantity(pedido)">-</button>
+            <input type="number" value="1" id="{{ pedido.id }}" class="quantity">
+            <button (click)="addQuantity(pedido)">+</button>
+          </td>
+          <td>
+            <p>{{ pedido.subtotal | currency:'PEN':'S/' }}</p>
           </td>
         </tr>
       </table>
