Estilos a PedidosMesero y DatosPedido

--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -21,30 +21,16 @@
               <P>{{'S/.' + pedido.price}}</P>
             </div>
           </td>
-          <td class="divBtn">
-            <button (click)="subtractQuantity(pedido)">-</button>
-            <input type="number" value="1" id="{{ pedido.id }}" class="quantity">
-            <button (click)="addQuantity(pedido)">+</button>
-          </td>
           <td>
-            <p>{{ pedido.subtotal | currency:'PEN':'S/' }}</p>
+            <div class="divBtn">
+              <button (click)="subtractQuantity(pedido)">-</button>
+              <input type="number" value="1" id="{{ pedido.id }}">
+              <button (click)="addQuantity(pedido)">+</button>
+            </div>
+            <h4 class="subtotal">{{ pedido.subtotal | currency:'PEN':'S/' }}</h4>
           </td>
         </tr>
       </table>
-
-      <!--
-        <div class="listaPedidos">
-        <button>x</button>
-        <img src="../../../assets/imagenes/img-carta/{{img}}">
-        <div class="p">
-          <p>{{title}}</p>
-          <P>{{'S/.' + priceHamburger}}</P>
-        </div>
-        <button (click)="restar()">-</button>
-        <input type="number">
-        <button (click)="sumar()">+</button>
-        </div>
-      -->
     </div>
 
    <app-datos-pedido></app-datos-pedido>
