--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
@@ -19,7 +19,7 @@ $color-rosa: #FF8087;
   display: flex;
   flex-direction: column;
   font-family: 'Mulish', sans-serif;
-  width: 49vw;
+  width: 51vw;
   margin: 5vh 0vh;
   align-self: flex-start;
 }
@@ -68,7 +68,7 @@ button{
   cursor: pointer;
   width: 20px;
   font-size: 25px;
-  margin: 0.5rem;
+  margin: 0.2rem;
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -78,35 +78,46 @@ input[type=number]::-webkit-outer-spin-button {
 
 input[type=number] { 
   -moz-appearance:textfield;
-  width: 1.5rem; 
-  border: 1px solid black;
+  width: 2rem;
+  height: 1.5rem;
+  border: none;
+  text-align: center;
 }
 .listaPedidos{
   flex-direction: column;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  background-color: $color-melon;
-  margin-top: 1em;
-  width: 100%;
-  gap: 0.5rem
+  background-color: #f1d5bb;
+  margin: 1em 0;
+  row-gap: 0.5rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 74vh;
 }
 
 tr{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 97%;
+  padding: 4px;
+
+  td{
+    h4{
+      text-align: center;
+    }
+  }
 }
 
 img{
   width: 50px;
   height: 50px;
-  margin: 10px 10px;
+  margin: 5px;
   border-radius: 100%
 }
-.p{
+p{
   font-size: 15px;
   margin: 5px;
   display: flex;
   flex-direction: column;
-  width: 10rem;
+  width: 11rem;
 }
