--- a/burgerQueen/src/app/mesero/carta/carta.component.scss
+++ b/burgerQueen/src/app/mesero/carta/carta.component.scss
@@ -104,7 +104,7 @@ $color-rosa: #FF8087;
     border-style: solid;
     border-color: $color-melon;
     margin: 10px 0;
-    h3, h4{
+    p, h4{
         font-family: 'Roboto', sans-serif;
         font-weight: 100;
     }
@@ -112,8 +112,8 @@ $color-rosa: #FF8087;
         font-size: 12px;
         padding: 4px 4px 0px 4px;
     }
-    h3{
-        font-size: 18px;
+    p{
+        font-size: 16px;
         font-weight: 700;
         color: $color-rosa;
         align-self: flex-end;
