Obteniendo monto total del pedido

--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -44,7 +44,7 @@
       <section class="containerSubTotal">
         <div>
           <p>Subtotal</p>
-          <p class="subtotal">{{ priceHamburger }}</p>
+          <p class="subtotal">{{ priceHamburger | currency:'PEN':'S/' }}</p>
         </div>
         <input type="submit" class="buttonAddOptions" id="buttonAddOptions" value="Añadir" routerLink="/pedidosMesero"
           routerLinkActive="activebutton" (click)="sendHamburgerOrder()">
