subiendo pedidos al firestore

--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -46,7 +46,7 @@
           <p>Subtotal</p>
           <p class="subtotal">{{ priceHamburger | currency:'PEN':'S/' }}</p>
         </div>
-        <input type="submit" class="buttonAddOptions" id="buttonAddOptions" value="Añadir" routerLink="/pedidosMesero"
+        <input type="submit" class="buttonAddOptions" id="buttonAddOptions" value="Añadir" routerLink="/carta"
           routerLinkActive="activebutton" (click)="sendHamburgerOrder()">
       </section>
     </div>
