--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="containerLogin" id="containerLogin">
   <div class="divLogin" id="divLogin">
     <h2>Inicia Sesión</h2>
-    <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
+    <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin" [(ngModel)]="usuario.email">
     <div class="eye">
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-      <!--input type="password" placeholder="password" id="passLogin" class="passLogin" 
-      [(ngModel)]="usuario.password"-->
-      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" >
-    
+      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
+      [(ngModel)]="usuario.password">
+      <!--<input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" > -->
     </div>
-    <a [class]="'forgetPassword'">Olvide mi contraseña</a>
-    <!--input type="submit" [class]="['buttonLogin']" routerLink="/view/principal" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()"-->
-    <input type="submit" class="buttonLogin" routerLink="/carta">
+    <a [class]="'forgetPassword'" (click)="resetPass()">Olvide mi contraseña</a>
+    <input type="submit"  routerLink="/" routerLinkActive="activebutton"  value="Ingresar" 
+    (click)="ingresar()">
+    <!-- <input type="submit" class="buttonLogin" routerLink="/carta"> -->
   </div>
 </div> 
