--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -5,7 +5,8 @@
     <i class="fa-solid fa-utensils" routerLink="" routerLinkActive="active"></i>
     <i class="fa-solid fa-receipt" routerLink="" routerLinkActive="active"></i>
     <i class="fa-solid fa-clipboard-list" routerLink="" routerLinkActive="active"></i>
-    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"
+    (click)="logout()"></i>
 </div>
 
 <!--Navbar Mesero-->
@@ -14,7 +15,8 @@
     <i class="fa-solid fa-utensils" routerLink="/totalPedidosMesero" routerLinkActive="active"></i>
     <i class="fa-solid fa-receipt" routerLink="/carta" routerLinkActive="active"></i>
     <i class="fa-solid fa-clipboard-list" routerLink="/pedidosMesero" routerLinkActive="active"></i>
-    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"
+    (click)="logout()"></i>
 </div>
 
 <!--Navbar Cocinero-->
@@ -22,5 +24,6 @@
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
     <i class="fa-solid fa-receipt" routerLink="" routerLinkActive="active"></i>
     <i class="fa-solid fa-clipboard-list" routerLink="" routerLinkActive="active"></i>
-    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"
+    (click)="logout()"></i>
 </div>
