Avances del navbar

--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -1,3 +1,5 @@
+<app-navegador></app-navegador>
+
 <div class="gestionUsuarios">
   <h2 class="titulo">TRABAJADORES</h2>
   <button onclick="document.getElementById('btnModal').style.display='block'" class="btnNuevoUsuario">
